--- a/gui/templates/index.html
+++ b/gui/templates/index.html
@@ -7,16 +7,16 @@
 	<div>
 		<button><a href="http://localhost:8787" target="_blank">RStudio</a></button>
 		<button>Spyder</button>
-		<button>IBM SAS</button>
-		<button>Git</button>
+		<button><a href="https://welcome.oda.sas.com/login" target="_blank">IBM SAS</a></button>
+		<button><a href="http://localhost:9080/vnc.html" target="_blank">Git</a></button>
 		<button><a href="http://localhost:8888" target="_blank">Jupyter Notebook</a></button>
-		<button>Orange</button>
-		<button>VS Code</button>
+		<button><a href="http://localhost:6901" target="_blank">Orange</a></button>
+		<button><a href="http://localhost:8443" target="_blank">VS Code</a></button>
 		<button>Hadoop</button>
-		<button>Spark</button>
-		<button><a href="http://localhost:8850" target="_blank">Tableau</a></button>
-		<button>SonarCloud</button>
-		<button>TensorFlow</button>
+		<button><a href="http://localhost:8080" target="_blank">Spark</a></button>
+		<button><a href="https://sso.online.tableau.com/public/idp/SSO" target="_blank">Tableau</a></button>
+		<button><a href="https://sonarcloud.io/sessions/new" target="_blank">SonarCloud</a></button>
+		<button><a href="http://localhost:9999/vnc.html" target="_blank">TensorFlow</a></button>
 		<button><a href="http://localhost:9090" target="_blank">Markdown</a></button>
 	</div>
 </body>
