--- a/gui/templates/index.html
+++ b/gui/templates/index.html
@@ -6,13 +6,13 @@
 <body>
 	<div>
 		<button><a href="http://localhost:8787" target="_blank">RStudio</a></button>
-		<button>Spyder</button>
+		<button><a href="http://localhost:1010/vnc.html" target="_blank">Spyder</a></button>
 		<button><a href="https://welcome.oda.sas.com/login" target="_blank">IBM SAS</a></button>
 		<button><a href="http://localhost:9080/vnc.html" target="_blank">Git</a></button>
 		<button><a href="http://localhost:8888" target="_blank">Jupyter Notebook</a></button>
 		<button><a href="http://localhost:6901" target="_blank">Orange</a></button>
 		<button><a href="http://localhost:8443" target="_blank">VS Code</a></button>
-		<button>Hadoop</button>
+		<button><a href="http://localhost:1010/vnc.html" target="_blank">Hadoop</a></button>
 		<button><a href="http://localhost:8080" target="_blank">Spark</a></button>
 		<button><a href="https://sso.online.tableau.com/public/idp/SSO" target="_blank">Tableau</a></button>
 		<button><a href="https://sonarcloud.io/sessions/new" target="_blank">SonarCloud</a></button>
